# SinghAndBhalla_CaMKII_SubunitExchange_2018

./: .gitattributes  .gitignore  .travis.yml  CaMKII_Paper_2018-elife.tex  CaMKII_Paper_2018.pandoc  Dockerfile  Makefile  README.md  bibliography.bib  create_zip_without_data_files.sh  glossaries.tex  pnas-new.cls  pnas.latex  pnassupportinginfo.sty
PaperFigures/: CMakeLists.txt  Makefile  README.md  camk2_fast_activation.tex  camk2_slow_activation.tex  camkii4_data_effect_of_turnover.csv  camkii6_data_effect_of_turnover.csv  camkii_interaction.tex  camkii_pp1_switch_level1_detail.tex  camkii_pp1_switch_summary.tex  camkii_subunit_exchage.tex  channel.tex  data_camkii_state_decay.csv  data_effect_of_turnover.csv  data_sync_phase_plot.csv  figure_1.tex  figure_2.tex  figure_3.tex  figure_4.tex  figure_5.tex  figure_camkii_activation.tex  figure_camkii_activation_114mm.tex  figure_discussion_1.tex  figure_effect_of_pp1_87mm.tex  figure_pp_tolerance_178mm.tex  figure_sync_87mm.tex  figure_sync_spread_114mm.tex  figure_sync_spread_178mm.tex  figure_validation_178mm.tex  macros.tex  mm_figure_a.tex  model_sbgn_pd.tex  model_sbgn_pd_autolayout.tex  model_schematic.tex  phase_plot_synchronization.py  resonance_camkii.tex  simple_bistable_switch.tex  su_spread_activation.csv  su_spread_activation_contour.csv  su_spread_activation_n18.csv  (+4 more)
PaperFigures/Abstract/: Makefile  another.tex  brain_switches.1.tex  brain_switches.tex  camkii_xkcd.b.tex  camkii_xkcd.c.tex  camkii_xkcd.tex  figure_summary.tex  macros.tex  macros_1.tex  summary.tex
PaperFigures/Data_ActivationSpread_ca100nm/: mean_std_rise_time.csv  mean_std_rise_time_reduced.csv
PaperFigures/_data/: summary_CaM10.csv  summary_CaM12.png.csv  summary_CaM8.png.csv
PaperFigures/elifeFigure1/: Makefile  README.md  camkii_pp1_switch_level1_detail.tex  camkii_subunit_exchage.tex  camkii_subunit_exchange.tex  figure_validation_178mm.tex  macros.tex  model_sbgn_pd.tex  sbgn.sty  switch_stability.csv
PaperFigures/elifeFigure2/: 12suOFF-summary.csv  12suON-summary.csv  Makefile  figure_effect_of_tolerace_114mm.tex  figure_effect_of_tolerace_140mm.tex  summary_CaM8.png.csv
PaperFigures/elifeFigure3/: Makefile  camkii12_data_effect_of_turnover.csv  camkii6_data_effect_of_turnover.csv  figure_turnover_tolerance_114.tex
PaperFigures/elifeFigure4/: Makefile  data_fig_sync_camkii_6.csv  figure_camkii_activation_114mm.tex  figure_camkii_activation_130mm.tex
PaperFigures/elifeFigure4/DATA_Activation_Spread/: rise_time_100nm.csv  rise_time_80nm.csv
PaperFigures/elifeFigure4SI/: figure_su_long_term_effect.tex
PaperFigures/elifeFigure4extra/: data_fig_sync_camkii_6.csv  figure_su_long_term_effect.tex  preprocess_data.py
PaperFigures/elifeFigure5/: Makefile  data_sync_phase_plot.csv  figure_sync_114mm.tex  figure_sync_150mm.tex
PaperFigures/elifeFigure6/: Makefile  data_camkii_state_decay.csv  figure_two_timecourses_114cm.tex  figure_two_timecourses_114mm.tex  figure_two_timecourses_87mm.tex  fit.py
PaperFigures/elifeFigure7/: CM1e-3_rg0.5541020330009492_rl0.14384498882876628.csv  CM1e-3_rg0.5541020330009492_rl0.4832930238571752.csv  CM8e-3_rg0.5541020330009492_rl0.14384498882876628.csv  CM8e-3_rg0.5541020330009492_rl0.4832930238571752.csv  Makefile  figure_2.csv  figure_exchange_rate.tex  figure_su_long_term_effect.tex
PaperFigures/elifeFigure8/: CM8e-3_rg0.10608183551394483_rl0.14384498882876628.csv  Makefile  all_histograms.csv  data_fig2c_merged.csv  data_fig3c_merged.csv  data_fig_sync_camkii_6.csv  data_fig_sync_camkii_8.csv  figure_exchange_rate.tex  figure_su_long_term_effect.old.20171102.tex  figure_su_long_term_effect.tex  plot_data.py  summary_CM100e-3.csv  summary_CM1e-3.csv  summary_CM20e-3.csv  summary_CM8e-3.csv  summary_camkii6.csv
PaperFigures/suppl/: Makefile  ca_background.py  data_camkii_state_decay.csv  figure_pp1_profile.tex  figure_two_timecourses_114cm_sup.tex  pp1_correlation_matrix_0.0.csv  pp1_correlation_matrix_1e-13.csv  pp1_correlation_matrix_1e-14.csv  pp1_correlation_matrix_1e-15.csv  pp1_correlation_matrix_5e-13.csv  pp1_correlation_matrix_5e-14.csv  pp1_correlation_matrix_5e-15.csv
exp_EffectOfSubunitExchangeOnBistability/: README.md  generate_figure.py  helper.py  params.py  run_single_experiment.sh
exp_EffectOfTurnover/: CMakeLists.txt  README.md  analyze_exp.py  camkii16_data_effect_of_turnover.csv  camkii4_data_effect_of_turnover.csv  camkii8_data_effect_of_turnover.csv  camkii_pp1_scheme.py  helper.py  params.py  run_single_exp.sh
exp_MANY_VOXELS_COUPLED_WITH_DIFFUSION/: CMakeLists.txt  README.md  analyze.py  archive.sh  camkii_pp1_scheme.py  camkii_pp1_scheme.py.dot  create_figure.py  experiment_summary.py  labnote.tex  params.py  result.csv
exp_SU_Activation_Spread/: CMakeLists.txt  DATA_CA_BASAL_100NM_summary.csv  README.md  analyze_exp.py  analyze_exp_decay_exp.py  camkii_pp1_scheme.py  camkii_pp1_scheme.py.dot  figure_for_suppl.py  generate_summary.sh  mean_std_rise_time.csv  params.py  run_single_exp.sh  summary_rise_time.csv  test.sh
exp_SU_Sync_Voxel_WellMixed/: CMakeLists.txt  README.md  analyze_exp.py  camkii_pp1_scheme.py  compute_transitions.py  labnote.pandoc  params.py  run_single_exp.sh  summary.csv  test.sh
exp_effect_of_removing_active_subunit/: CMakeLists.txt  Makefile  README.md  analyze_exp.py  camkii_pp1_scheme.py  camkii_pp1_scheme.py.dot  labnote.md  labnote.md.aux  labnote.md.pgf-plot.gnuplot  labnote.md.pgf-plot.table  labnote.md.tex  params.py  params.py.in
exp_effect_of_subunit_exchange_on_bistability/: CMakeLists.txt  README.md  run_single_exp_test.sh
exp_validation/: CMakeLists.txt  CSVParser.hs  README.md  figure_camkii12_voxel1.tex  figure_camkii12_voxel2.tex  figure_camkii12_voxel3.tex  figure_camkii8_voxel1.tex  figure_camkii8_voxel2.tex  figure_camkii8_voxel3.tex  figure_sample_trajectories.tex  figure_transition_rate_vs_voxels.tex  figure_transition_rate_vs_voxels_camkii8.tex  generate_figure.py  generate_figure_lifetime.py  helper.py  labnote.pandoc  labnote.tex
model/: README.md  params.py  requirements.txt  run_bistable.sh
(+28 files in other folders)
